[tool.poetry]
name = "introduction-spark"
version = "0.1.0"
description = ""
authors = ["uenotakato <takato.0831@outlook.jp>"]
readme = "README.md"
packages = [{include = "introduction_spark"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = {extras = ["pandas-on-spark"], version = "^3.3.0"}
plotly = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
